tests/test_struct/bad/wrong_qualified_field.catala_en
## Article

```catala
declaration structure Foo:
  data f content integer

declaration structure Bar:
  data f content integer
  data g content integer

declaration scope A:
  context x content Foo
  context y content integer

scope A:
  definition x equals Foo { -- f: 1 }
  definition y equals x.Foo.g
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] Struct Foo does not contain field g

┌─⯈ tests/test_struct/bad/wrong_qualified_field.catala_en:17.22-29:
└──┐
17 │   definition y equals x.Foo.g
   │                       ‾‾‾‾‾‾‾
   └─ Article
#return code 255#
```
